timeframes halfway done
